# atenas

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  api.py  bot.py  cli.py  config.py  dashboard.py  main.py  scheduler.py  telegram_auth.py  telegram_formatters.py  telegram_notifications.py  telegram_services.py
core/: __init__.py  action_executor.py  backup.py  command_catalog.py  db.py  embedding_manager.py  graph_manager.py  llm_router.py  memory_manager.py  path_policy.py  policy_engine.py  retrieval_engine.py  schemas.py  skill_registry.py  time.py  utils.py
docs/: AGENT_LOOP.md  AGENT_POLICY.md  ARCHITECTURE.md  CODEX_BUILD_PROMPT.md  COMMAND_TOOL_PARITY.md  CONTEXT_MANAGEMENT.md  DATA_MODEL.md  DECISIONS.md  GETTING_STARTED.md  HANDOFF.md  HANDOFF_NL_INTERFACE.md  HANDOFF_PROPOSE_VALIDATE_APPROVE.md  PRODUCT_SPEC.md  README.md  REQUIREMENTS.md  ROADMAP.md  SCHEMAS.md  SECURITY.md  class_timetable.md  memory.md  status.md  study_planner.md  work_schedule.md
skills/: __init__.py
tests/: __init__.py  conftest.py  test_action_executor.py  test_agent_runtime_state.py  test_agent_traces.py  test_api.py  test_backup.py  test_bot.py  test_cli.py  test_command_tool_parity.py  test_config.py  test_dashboard.py  test_data_commands.py  test_db.py  test_docs_status.py  test_llm_commands.py  test_llm_dashboard.py  test_memory_manager.py  test_nl_agent_loop.py  test_nl_classifier.py  test_nl_commands.py  test_nl_router.py  test_notification_commands.py  test_notifications.py  test_packaging.py  test_path_policy.py  test_planning_commands.py  test_policy_engine.py  test_retrieval_commands.py  test_retrieval_dashboard.py  (+17 more)
(+133 files in other folders)
