[project]
name = "atenas-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-telegram-bot>=21.6",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "jinja2>=3.1.6",
    "click>=8.1.0",
]

[project.scripts]
atenas = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*", "core*", "skills*"]
exclude = ["data*", "logs*", "memory*", "output*", "inbox*", "web*", "tests*", "docs*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
